--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "katex": "^0.16.9",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "rehype": "^13.0.1",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-pretty-code": "^0.13.0",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "remark-html-katex": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "shiki": "^1.1.6",
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
