--- a/package.json
+++ b/package.json
@@ -9,29 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.9.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.9",
-    "next": "14.1.0",
+    "next": "13.4.19",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "rehype": "^13.0.1",
     "rehype-code-titles": "^1.2.0",
+    "rehype-format": "^5.0.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.13.0",
     "rehype-prism-plus": "^2.0.0",
+    "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-html-katex": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
+    "remark-prism": "^1.3.6",
     "remark-rehype": "^11.1.0",
     "shiki": "^1.1.6",
     "unified": "^11.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/mapbox__rehype-prism": "^0.8.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
